Corrigido tamanhos das font, cards e footer.

--- a/public/style.css
+++ b/public/style.css
@@ -80,10 +80,10 @@ body {
 
 /* Icon menu */
 .logotipo .open-menu {
-    border-top: 3px solid;
+    border-top: 2px solid var(--color-font-b-ligth);
     width: 30px;
     position: fixed;
-    top: 3rem;
+    top: 2.5rem;
     right: 2rem;
     cursor: pointer;
     transition: .5s;
@@ -94,7 +94,7 @@ body {
     display: block;
     width: 30px;
     height: 2px;
-    background: currentColor;
+    background-color: var(--color-font-b-ligth);
     margin-top: 6px;
     transition: 1s;
     position: relative;
@@ -169,7 +169,7 @@ body {
 }
 
 .nav-link a {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 600;
     color: var(--color-font-ligth);
 }
@@ -219,7 +219,7 @@ body {
     position: absolute;
     top: 2.5rem;
     left: 2.5rem;
-    width: 15rem;
+    width: 13rem;
 }
 
 .img-home:nth-child(2) {
@@ -236,7 +236,7 @@ body {
     position: absolute;
     top: 30rem;
     right: 3rem;
-    width: 19rem;
+    width: 17rem;
 }
 
 .img-home:nth-child(4) {
@@ -245,22 +245,22 @@ body {
     position: absolute;
     top: 53rem;
     left: 2rem;
-    height: 10rem;
-    width: 10rem;
+    height: 9rem;
+    width: 9rem;
 }
 
 .img-home:nth-child(5) {
     position: absolute;
     top: 63rem;
     right: 2rem;
-    width: 15rem;
+    width: 14rem;
 }
 
 .img-home:nth-child(6) {
     position: absolute;
     top: 83rem;
     left: 2rem;
-    width: 22rem;
+    width: 20rem;
     border: 1.5rem solid var(--color-font-ligth);
     border-radius: 50%;
 }
@@ -275,14 +275,14 @@ body {
 }
 
 .content-home .title-home {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     color: var(--color-font-b-ligth);
     padding-top: 1rem;
 }
 
 .content-home .text-home {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2.5rem;
     color: var(--color-font-ligth);
@@ -304,7 +304,7 @@ body {
 
 .btn-center .btn-menu {
     padding: .5rem 3rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     color: var(--color-font-ligth);
     border: none;
@@ -321,7 +321,7 @@ body {
 }
 
 #noivos .title-info {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     text-align: center;
     color: var(--color-font-b-ligth);
@@ -339,11 +339,11 @@ body {
 
 .card-info {
     background-color: var(--color-bg-ligth);
-    width: 20rem;
+    width: 19rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    padding: 2rem;
+    padding: 1.5rem 2rem;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -356,8 +356,8 @@ body {
 }
 
 .card-info .text-info {
-    color: var(--color-border-ligth);
-    font-size: 1.4rem;
+    color: var(--color-font-ligth);
+    font-size: 1.3rem;
     font-weight: 500;
     text-align: justify;
 }
@@ -381,7 +381,7 @@ body {
     position: absolute;
     top: 4rem;
     left: 2rem;
-    width: 15rem;
+    width: 13rem;
 }
 
 .img-pref:nth-child(2) {
@@ -399,12 +399,12 @@ body {
     position: absolute;
     top: 32rem;
     left: 3rem;
-    width: 20rem;
+    width: 17rem;
 }
 
 .img-pref:nth-child(4) {
     position: absolute;
-    top: 58rem;
+    top: 56rem;
     right: 2rem;
     width: 17rem;
     border: 1.5rem solid var(--color-font-ligth);
@@ -421,14 +421,14 @@ body {
 }
 
 .title-pref {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     text-align: center;
     color: var(--color-font-b-ligth);
 }
 
 .text-pref {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2.5rem;
     color: var(--color-font-ligth);
@@ -476,32 +476,33 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding: 23rem 0 3rem 0;
+    padding: 19rem 0 3rem 0;
 }
 
 .card-padrinho {
     background-color: var(--color-bg-ligth);
-    width: 20rem;
+    width: 19rem;
     padding: 2rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .padrinhos .title {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     text-align: center;
     color: var(--color-font-b-ligth);
 }
 
 .padrinhos .text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2.5rem;
     text-align: justify;
+    color: var(--color-font-b-ligth);
 }
 
 .card-padrinho .img-padrinho {
@@ -525,7 +526,7 @@ body {
 }
 
 .card-padrinho .text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2rem;
     text-align: justify;
@@ -551,7 +552,7 @@ body {
 }
 
 .imgs-festa:nth-child(1) {
-    width: 20rem;
+    width: 16rem;
     position: absolute;
     top: 4rem;
     left: 3rem;
@@ -586,7 +587,7 @@ body {
 }
 
 .imgs-festa:nth-child(5) {
-    width: 20rem;
+    width: 18rem;
     position: absolute;
     top: 67rem;
     left: 3rem;
@@ -602,14 +603,14 @@ body {
 }
 
 .descricao-festa .title {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     text-align: center;
     color: var(--color-font-b-ligth);
 }
 
 .descricao-festa .text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2.5rem;
     color: var(--color-font-ligth);
@@ -660,7 +661,7 @@ body {
 }
 
 .descricao-ajuda .title {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     color: var(--color-font-b-ligth);
     text-align: center;
@@ -668,7 +669,7 @@ body {
 }
 
 .descricao-ajuda .text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     color: var(--color-font-b-ligth);
     text-align: justify;
@@ -701,7 +702,7 @@ body {
 }
 
 .img-agradecimento img {
-    width: 20rem;
+    width: 17rem;
     padding: 8rem 0 2rem 2rem;
 }
 
@@ -715,14 +716,14 @@ body {
 }
 
 .descricao-agradecimento .title {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 600;
     color: var(--color-font-b-ligth);
     text-align: center;
 }
 
 .descricao-agradecimento .text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     line-height: 2.5rem;
     color: var(--color-font-ligth);
@@ -732,7 +733,7 @@ body {
 .imgs-agradecimentos {
     width: 100%;
     position: relative;
-    height: 135dvh;
+    height: 130dvh;
 }
 
 .imgs-agradecimentos img {
@@ -759,7 +760,7 @@ body {
 }
 
 .imgs-agradecimento:nth-child(3) {
-    width: 20rem;
+    width: 17rem;
     position: absolute;
     top: 35rem;
     right: 2rem;
@@ -772,7 +773,7 @@ body {
 
 #contacts .imgs-contact {
     width: 100%;
-    height: 130dvh;
+    height: 120dvh;
     position: relative;
 }
 
@@ -792,19 +793,19 @@ body {
 }
 
 .img-contact:nth-child(2) {
-    width: 20rem;
+    width: 17rem;
     position: absolute;
     top: 17rem;
-    right: 3rem;
+    right: 4rem;
 }
 
 .img-contact:nth-child(3) {
     background-color: var(--color-font-ligth);
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
     position: absolute;
-    top: 30rem;
+    top: 28rem;
     right: 2rem;
 }
 
@@ -815,12 +816,121 @@ body {
     border-radius: 50%;
     border: 1.5rem solid var(--color-font-ligth);
     position: absolute;
-    top: 45rem;
-    left: 6rem;
+    top: 42rem;
+    right: 6rem;
+}
+
+#contact {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background-color: var(--color-border-ligth);
+    padding: 3rem 3rem;
+}
+
+.title-contact {
+    font-size: 2.3rem;
+    font-weight: 700;
+    color: var(--color-bg-ligth);
+}
+
+.box-tel .title-tel, .title-email, .title-local, .link-contact {
+    color: var(--color-bg-ligth);
+    font-size: 1.1rem;
+    text-align: justify;
+}
+
+.box-area {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.box-area .title-textarea {
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--color-bg-ligth);
+    padding-top: 2rem;
+}
+
+.box-area .text-area {
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--color-font-b-ligth);
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid var(--color-font-ligth);
+    border-radius: 1rem;
+}
+
+.box-buttom .btn-submit {
+    padding: 0 3rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: var(--color-font-b-ligth);
+    border: none;
+    background-color: var(--color-secundary-ligth);
+}
+
+.copywhite {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.copywhite .box-termos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    padding: 3rem 0;
+}
+
+.box-termos .area-dev {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.area-dev .text-copy, .dev, .github {
+    color: var(--color-font-b-ligth);
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.area-dev .github {
+    cursor: pointer;
+}
+
+.copywhite .politicas {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.politicas .politica {
+    color: var(--color-font-ligth);
+    font-size: 1.15rem;
+    font-weight: 400;
 }
 
 .logo-foot {
-    width: 20rem;
+    width: 12rem;
     display: flex;
     justify-content: center;
 }
